objects/vlocity_ins__AssetSecurityPosition__c.object
<CustomObject>
    <description>Represents an investment holding of some security within a financial account.</description>
    <fields>
        <fullName>vlocity_ins__FinancialAccountAssetId__c</fullName>
        <label>Financial Account</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Security Positions</relationshipLabel>
        <relationshipName>AssetSecurityPositions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__NumberOfShares__c</fullName>
        <label>Share</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SecurityId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Security</label>
        <referenceTo>vlocity_ins__FinancialSecurity__c</referenceTo>
        <relationshipLabel>Financial Account Positions</relationshipLabel>
        <relationshipName>AssetSecurityPositions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SecurityName__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;vlocity_ins__SecurityId__c,vlocity_ins__SecurityId__r.Name,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SecurityPriceAsOfDate__c</fullName>
        <formula>vlocity_ins__SecurityId__r.vlocity_ins__PriceAsOfDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SecurityPrice__c</fullName>
        <formula>vlocity_ins__SecurityId__r.vlocity_ins__Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TickerSymbol__c</fullName>
        <formula>vlocity_ins__SecurityId__r.vlocity_ins__TickerSymbol__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Symbol</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Value__c</fullName>
        <formula>vlocity_ins__NumberOfShares__c * vlocity_ins__SecurityPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Security Position</label>
    <nameField>
        <label>Position Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Security Position</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>